# yelp-review-classifier

./: .gitignore  README.md  pyproject.toml
src/: inference.ipynb  inference.py  publish.py  test.ipynb  train.ipynb  tune.ipynb
