[project]
name = "yelp-review-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "filelock==3.19.1",
    "fsspec==2025.9.0",
    "hf-xet==1.2.0",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "markupsafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.3.3",
    "nvidia-cublas==13.0.0.19",
    "nvidia-cuda-cupti==13.0.48",
    "nvidia-cuda-nvrtc==13.0.48",
    "nvidia-cuda-runtime==13.0.48",
    "nvidia-cudnn-cu13==9.13.0.50",
    "nvidia-cufft==12.0.0.15",
    "nvidia-cufile==1.15.0.42",
    "nvidia-curand==10.4.0.35",
    "nvidia-cusolver==12.0.3.29",
    "nvidia-cusparse==12.6.2.49",
    "nvidia-cusparselt-cu13==0.8.0",
    "nvidia-nccl-cu13==2.27.7",
    "nvidia-nvjitlink==13.0.39",
    "nvidia-nvshmem-cu13==3.3.24",
    "nvidia-nvtx==13.0.39",
    "packaging==25.0",
    "pillow==11.3.0",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "scikit-learn>=1.7.2",
    "setuptools==70.2.0",
    "sympy==1.14.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "triton==3.5.1",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
